--- a/Science_Gateway_Apex/pom.xml
+++ b/Science_Gateway_Apex/pom.xml
@@ -7,4 +7,22 @@
     <packaging>jar</packaging>
     <version>0.1.0</version>
 
+	<build>
+	  <directory>target</directory>
+	  <outputDirectory>target/classes</outputDirectory>
+	  <finalName>${project.artifactId}-${project.version}</finalName>
+	  <testOutputDirectory>target/test-classes</testOutputDirectory>
+	  <sourceDirectory>src/main/java</sourceDirectory>
+	  <testSourceDirectory>src/test/java</testSourceDirectory>
+	  <resources>
+	    <resource>
+	      <directory>src/main/resources</directory>
+	    </resource>
+	  </resources>
+	  <testResources>
+	    <testResource>
+	      <directory>src/test/resources</directory>
+	    </testResource>
+	  </testResources>
+	</build>
 </project>
