--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -1,10 +1,10 @@
 loginUser=mawagle
-loginKey=/home/mangirish/.ssh/id_rsa
-knownHosts=/home/mangirish/.ssh/known_hosts
+loginKey=/path/id_rsa
+knownHosts=/path/known_hosts
 srcFile=src/main/resources/scripts/karst/sendEmail.sh
 srcFileProp=src/main/resources/scripts/karst/sendmail.properties
-destFile=/N/u/mawagle/Karst/sendEmail.sh
-destFileProp=/N/u/mawagle/Karst/sendmail.properties
+destFile=/path/sendEmail.sh
+destFileProp=/path/sendmail.properties
 hostName=karst.uits.iu.edu
 portName=22
-passPhrase=aq1sw2de
+passPhrase=""
