--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -1,10 +1,13 @@
-loginUser=mawagle
+# Login Properties
+loginUser=user
 loginKey=/path/id_rsa
 knownHosts=/path/known_hosts
-srcFile=src/main/resources/scripts/karst/sendEmail.sh
-srcFileProp=src/main/resources/scripts/karst/sendmail.properties
-destFile=/path/sendEmail.sh
-destFileProp=/path/sendmail.properties
 hostName=karst.uits.iu.edu
 portName=22
-passPhrase=""
+passPhrase=xxxxx
+
+# Email Script Properties
+srcFileEmail=src/main/resources/scripts/karst/sendEmail.sh
+srcFileEmailProp=src/main/resources/scripts/karst/sendmail.properties
+destFileEmail=/path/sendEmail.sh
+destFileEmailProp=/path/sendmail.properties
