Changed send email implementation to use jobname

--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -11,3 +11,7 @@ srcFileEmail=src/main/resources/scripts/karst/sendEmail.sh
 srcFileEmailProp=src/main/resources/scripts/karst/sendmail.properties
 destFileEmail=/path/sendEmail.sh
 destFileEmailProp=/path/sendmail.properties
+
+# job script properties
+tempJobScript=/path/temp.script
+destJobScript=/path/temp.script
