--- a/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
+++ b/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>SGA_Apex_REST_API_WAR</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+ 	<display-name>SGA_Apex_REST_API_WAR</display-name>
+	<servlet>
+        <servlet-name>sga-apex-rest-ws</servlet-name>
+        <servlet-class>org.apache.wink.server.internal.servlet.RestServlet</servlet-class>
+        <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>edu.sga.apex.rest.application.Apex_REST_Application</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+	</servlet>
+    <servlet-mapping>
+        <servlet-name>sga-apex-rest-ws</servlet-name>
+        <url-pattern>/sga/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
