--- a/SGA_Apex_REST_API_WAR/pom.xml
+++ b/SGA_Apex_REST_API_WAR/pom.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <!-- <parent>
+	  <groupId>edu.sga.apex</groupId>
+	  <artifactId>SGA_Build</artifactId>
+	  <version>1</version>
+	</parent> -->
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.sga.apex</groupId>
-    <artifactId>SGA_Apex_REST_API</artifactId>
+    <artifactId>SGA_Apex_REST_API_WAR</artifactId>
     <packaging>war</packaging>
     <version>0.1.0</version>
-    
+
     <properties>
 
 		<!-- Logging -->
@@ -68,29 +75,7 @@
 	    </testResource>
 	  </testResources>
 	  <plugins>
-		  <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-shade-plugin</artifactId>
-	        <version>2.4.3</version>
-	        <executions>
-	          <execution>
-	            <phase>package</phase>
-	            <goals>
-	              <goal>shade</goal>
-	            </goals>
-	            <configuration>
-	              <transformers>
-	                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-	                  <manifestEntries>
-	                    <Main-Class>edu.sga.apex.client.SCJobRunner</Main-Class>
-	                    <Build-Number>${version}</Build-Number>
-	                  </manifestEntries>
-	                </transformer>
-	              </transformers>
-	            </configuration>
-	          </execution>
-	        </executions>
-	      </plugin>
+
 	  </plugins>
 	</build>
 </project>
