--- a/SGA_Apex_REST_API_WAR/pom.xml
+++ b/SGA_Apex_REST_API_WAR/pom.xml
@@ -21,7 +21,7 @@
 
 		<!-- Jetty -->
 		<jettyVersion>9.2.11.v20150529</jettyVersion>
-		
+
 		<!-- Maven war plugin -->
 		<warPluginVersion>2.6</warPluginVersion>
 	</properties>
@@ -33,6 +33,18 @@
 			<groupId>org.apache.wink</groupId>
 			<artifactId>wink-server</artifactId>
 			<version>1.4</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-json-provider</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
 		</dependency>
 
 		<!-- SLF4J Logging -->
@@ -83,7 +95,7 @@
 				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
