added manager and pom dependenccy

--- a/SGA_Apex_REST_API_WAR/pom.xml
+++ b/SGA_Apex_REST_API_WAR/pom.xml
@@ -24,9 +24,18 @@
 
 		<!-- Maven war plugin -->
 		<warPluginVersion>2.6</warPluginVersion>
+		
+		<!-- SGA middleware version -->
+		<sgaJarVersion>0.1.0</sgaJarVersion>
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>edu.sga.apex</groupId>
+			<artifactId>ScienceGatewayApex</artifactId>
+			<version>${sgaJarVersion}</version>
+		</dependency>
 
 		<!-- Apache WINK -->
 		<dependency>
