--- a/SGA_Apex_Client/pom.xml
+++ b/SGA_Apex_Client/pom.xml
@@ -27,6 +27,13 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- Commons Validator -->
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
 		<!-- SLF4J Logging -->
 		<dependency>
 			<groupId>log4j</groupId>
