Copy binary to remote with executable permissions

--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -6,6 +6,9 @@ hostName=karst.uits.iu.edu
 portName=22
 passPhrase=xxxxx
 
+# Home Directory
+userHome=/N/u/%s/Karst
+
 # Email Script Properties
 srcFileEmail=scripts/karst/sendEmail.sh
 srcFileEmailProp=scripts/karst/sendmail.properties
@@ -13,4 +16,6 @@ destFileEmail=/path/sendEmail.sh
 destFileEmailProp=/path/sendmail.properties
 
 # job script properties
+srcScript=scripts/karst/hello.sh
+destScript=/N/u/%s/Karst/apex_scripts/hello.sh
 destJobScript=/path/temp.script
