--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -12,10 +12,10 @@ userHome=/N/u/%s/Karst
 # Email Script Properties
 srcFileEmail=scripts/karst/sendEmail.sh
 srcFileEmailProp=scripts/karst/sendmail.properties
-destFileEmail=/path/sendEmail.sh
-destFileEmailProp=/path/sendmail.properties
+destFileEmail=/N/u/%s/Karst/sendEmail.sh
+destFileEmailProp=/N/u/%s/Karst/sendmail.properties
 
 # job script properties
 srcScript=scripts/karst/hello.sh
 destScript=/N/u/%s/Karst/apex_scripts/hello.sh
-destJobScript=/path/temp.script
+destJobScript=/N/u/%s/Karst/temp.script
