Handle Cross Origin Resource Sharing (CORS) issue.

--- a/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
+++ b/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
@@ -14,4 +14,13 @@
         <servlet-name>sga-apex-rest-ws</servlet-name>
         <url-pattern>/sga/rest/*</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>cross-origin</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/sga/rest/*</url-pattern>
+    </filter-mapping>
 </web-app>
