Login page integration with jetty & webapp

--- a/SGA_Apex_REST_API_WAR/pom.xml
+++ b/SGA_Apex_REST_API_WAR/pom.xml
@@ -147,7 +147,7 @@
 				        <config>${project.basedir}/jetty-config.properties</config>
 				      </loginService>
 				    </loginServices>
-					<!-- <jettyXml>jetty.xml</jettyXml> -->
+					<jettyXml>jetty.xml</jettyXml>
 				</configuration>
 			</plugin>
 		</plugins>
