--- a/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
+++ b/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 	  <auth-method>FORM</auth-method>
 	  <realm-name>ApexRealm</realm-name>
 	  <form-login-config>
-	     <form-login-page>/login.html</form-login-page>
+	     <form-login-page>/sga_login.html</form-login-page>
 	     <form-error-page>/login-error.html</form-error-page>
 	  </form-login-config>
 	</login-config>
@@ -44,5 +44,12 @@
 		<auth-constraint>
 			<role-name>admin</role-name>
 		</auth-constraint>
+	</security-constraint>
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Open resources</web-resource-name>
+			<url-pattern>/assets/*</url-pattern>
+		</web-resource-collection>
 	</security-constraint>
 </web-app>
