changes to grommacs

--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -17,5 +17,5 @@ destFileEmailProp=/N/u/%s/Karst/sendmail.properties
 
 # job script properties
 srcScript=scripts/karst/hello.sh
-destScript=/N/u/%s/Karst/apex_scripts/hello.sh
+destScript=/N/u/%s/Karst/
 destJobScript=/N/u/%s/Karst/temp.script
