--- a/Science_Gateway_Apex/pom.xml
+++ b/Science_Gateway_Apex/pom.xml
@@ -30,6 +30,13 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- Apache Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
 		<!-- SLF4J Logging -->
 		<dependency>
 			<groupId>log4j</groupId>
