--- a/Science_Gateway_Apex/pom.xml
+++ b/Science_Gateway_Apex/pom.xml
@@ -13,6 +13,12 @@
 
 	<properties>
 
+		<!-- SQLITE Version -->
+		<sqlite.version>3.7.2</sqlite.version>
+		
+		<!-- JPA Version -->
+		<jpa.version>2.5.0</jpa.version>
+		
 		<!-- Logging -->
 		<slf4j.version>1.7.5</slf4j.version>
 
@@ -62,19 +68,19 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.7.2</version>
+			<version>${sqlite.version}</version>
 		</dependency>
 
 		<!-- JPA -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<version>1.0.1.Final</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
-			<version>2.5.0</version>
+			<version>${jpa.version}</version>
 		</dependency>
 
 		<!-- Testing -->
