--- a/Science_Gateway_Apex/pom.xml
+++ b/Science_Gateway_Apex/pom.xml
@@ -15,10 +15,10 @@
 
 		<!-- SQLITE Version -->
 		<sqlite.version>3.7.2</sqlite.version>
-		
+
 		<!-- JPA Version -->
-		<jpa.version>2.5.0</jpa.version>
-		
+		<jpa.version>2.4.1</jpa.version>
+
 		<!-- Logging -->
 		<slf4j.version>1.7.5</slf4j.version>
 
@@ -72,14 +72,9 @@
 		</dependency>
 
 		<!-- JPA -->
-		<!-- <dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
-		</dependency> -->
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa</artifactId>
 			<version>${jpa.version}</version>
 		</dependency>
 
@@ -147,6 +142,33 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.openjpa</groupId>
+				<artifactId>openjpa-maven-plugin</artifactId>
+				<version>${jpa.version}</version>
+				<configuration>
+					<includes>src/main/java/edu/sga/apex/entity/*.class</includes>
+					<addDefaultConstructor>true</addDefaultConstructor>
+					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>enhancer</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>enhance</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.openjpa</groupId>
+						<artifactId>openjpa</artifactId>
+						<!-- set the version to be the same as the level in your runtime -->
+						<version>${jpa.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
