--- a/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
+++ b/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
@@ -48,6 +48,7 @@
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>admin</role-name>
+			<role-name>user</role-name>
 		</auth-constraint>
 	</security-constraint>
 
