--- a/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
+++ b/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
@@ -7,15 +7,15 @@ portName=22
 passPhrase=xxxxx
 
 # Home Directory
-userHome=/N/u/%s/BigRed2
+userHome=/N/u/%s/BigRed2/%s
 
 # Email Script Properties
 srcFileEmail=scripts/bigred2/sendEmail.sh
 srcFileEmailProp=scripts/bigred2/sendmail.properties
-destFileEmail=/N/u/%s/BigRed2/sendEmail.sh
-destFileEmailProp=/N/u/%s/BigRed2/sendmail.properties
+destFileEmail=/N/u/%s/BigRed2/%s/sendEmail.sh
+destFileEmailProp=/N/u/%s/BigRed2/%s/sendmail.properties
 
 # job script properties
 srcScript=scripts/bigred2/hello.sh
-destScript=/N/u/%s/BigRed2/
-destJobScript=/N/u/%s/BigRed2/temp.script
+destScript=/N/u/%s/BigRed2/%s
+destJobScript=/N/u/%s/BigRed2/%s/temp.script
