changes for tar archiving of grommacs output

--- a/Science_Gateway_Apex/src/main/resources/karst_config.properties
+++ b/Science_Gateway_Apex/src/main/resources/karst_config.properties
@@ -7,15 +7,15 @@ portName=22
 passPhrase=xxxxx
 
 # Home Directory
-userHome=/N/u/%s/Karst/%s
+jobDir=/N/u/%s/Karst/%s/%s
 
 # Email Script Properties
 srcFileEmail=scripts/karst/sendEmail.sh
 srcFileEmailProp=scripts/karst/sendmail.properties
-destFileEmail=/N/u/%s/Karst/%s/sendEmail.sh
-destFileEmailProp=/N/u/%s/Karst/%s/sendmail.properties
+destFileEmail=sendEmail.sh
+destFileEmailProp=sendmail.properties
 
 # job script properties
 srcScript=scripts/karst/hello.sh
-destScript=/N/u/%s/Karst/%s
-destJobScript=/N/u/%s/Karst/%s/temp.script
+# destScript=/N/u/%s/Karst/%s
+destJobScript=temp.script
