--- a/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
+++ b/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
@@ -6,8 +6,8 @@ hostName=bigred2.uits.iu.edu
 portName=22
 passPhrase=xxxxx
 
-# Home Directory
-userHome=/N/u/%s/BigRed2/%s/%s
+# User job Directory
+jobDir=/N/u/%s/BigRed2/%s/%s
 
 # Email Script Properties
 srcFileEmail=scripts/bigred2/sendEmail.sh
