--- a/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
+++ b/SGA_Apex_REST_API_WAR/WebContent/WEB-INF/web.xml
@@ -56,6 +56,7 @@
 		<web-resource-collection>
 			<web-resource-name>Open resources</web-resource-name>
 			<url-pattern>/assets/*</url-pattern>
+			<url-pattern>/sga/rest/user/register</url-pattern>
 		</web-resource-collection>
 	</security-constraint>
 </web-app>
