--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,17 @@ jdk:
 sudo: false
 install: true
 script: cd "SGA_Build" && mvn -e clean install
+deploy:
+    provider: s3
+    access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: airavata-team-apex
+    endpoint: airavata-team-apex.s3-us-east-1.amazonaws.com
+    region: us-east-1
+    skip_cleanup: true
+    local-dir: output
+    acl: public_read
+    detect_encoding: true
 notifications:
   email:
     recipients:
