--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ deploy:
     skip_cleanup: true
     acl: public_read
     detect_encoding: true
+    on:
+      repo: airavata-courses/TeamApex
+      all_branches: true
 notifications:
   email:
     recipients:
