--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install: true
 script: cd "SGA_Build" && mvn -e clean install
 
 before_deploy:
+  - pwd
+  - ls -l
   - mkdir -p "dpl_cd_upload"
   - mv "SGA_Apex_REST_API_WAR/target/SGA_Apex_REST_API_WAR-0.1.0.war" "dpl_cd_upload/SGA_Apex_REST_API_WAR-0.1.0.war"
 
@@ -19,7 +21,7 @@ deploy:
     skip_cleanup: true
     acl: public_read
     detect_encoding: true
-    on:
+    on: &2
       repo: airavata-courses/TeamApex
       all_branches: true
 notifications:
