--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ script: cd "SGA_Build" && mvn -e clean install
 before_deploy:
   - cd ..
   - pwd && ls -l
+  - zip -r "SGA_Apex_REST_API_WAR.zip" "SGA_Apex_REST_API_WAR"
   - mkdir -p "dpl_cd_upload"
-  - mv "SGA_Apex_REST_API_WAR/target/SGA_Apex_REST_API_WAR-0.1.0.war" "dpl_cd_upload/SGA_Apex_REST_API_WAR-0.1.0.war"
+  - mv "SGA_Apex_REST_API_WAR.zip" "dpl_cd_upload/SGA_Apex_REST_API_WAR.zip"
   - pwd && ls -l
 
 deploy:
@@ -22,9 +23,23 @@ deploy:
     skip_cleanup: true
     acl: public_read
     detect_encoding: true
-    on: &2
+    on:
       repo: airavata-courses/TeamApex
       all_branches: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: airavata-team-apex
+    key: SGA_Apex_REST_API_WAR.zip
+    bundle_type: zip
+    application: SGA-TeamApex-AWS
+    deployment_group: AWSCodeDeploy
+    on:
+      repo: airavata-courses/TeamApex
+      all_branches: true
+after_deploy:
+  - whoami
+  - pwd && ls -l
 notifications:
   email:
     recipients:
