--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_deploy:
   - pwd && ls -l
   - zip -r SGA_Apex_REST_API_WAR.zip SGA_Apex_REST_API_WAR || true
   - mkdir -p "dpl_cd_upload"
-  - mv "SGA_Apex_REST_API_WAR.zip" "dpl_cd_upload/SGA_Apex_REST_API_WAR.zip"
+  - mv SGA_Apex_REST_API_WAR.zip dpl_cd_upload/SGA_Apex_REST_API_WAR.zip || true
   - pwd && ls -l
 
 deploy:
