--- a/appspec.yml
+++ b/appspec.yml
@@ -7,11 +7,11 @@ hooks:
   BeforeInstall:
     - location: SGA_Apex_REST_API_WAR/src/main/resources/scripts/before-install.sh
       runas: root
-  AfterInstall:
-    - location: SGA_Apex_REST_API_WAR/src/main/resources/scripts/after-install.sh
-      timeout: 180
-      runas: root
   ApplicationStart:
-    - location: SGA_Apex_REST_API_WAR/src/main/resources/scripts/install.sh
+    - location: /home/ec2-user/SGA_Apex_REST_API_WAR/src/main/resources/scripts/install.sh
       timeout: 3600
+      runas: root
+  ValidateService:
+    - location: /home/ec2-user/SGA_Apex_REST_API_WAR/src/main/resources/scripts/validate-service.sh
+      timeout: 180
       runas: root
