--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ install: true
 
 before_script:
   - echo "##########BEFORE SCRIPT#############"
-  - echo $LOGIN_USER
-  - echo $LOGIN_PRIVATE_KEY_PATH
-  - echo $LOGIN_KEY_PASSPHRASE
+  - echo "$LOGIN_USER"
+  - echo "$LOGIN_PRIVATE_KEY_PATH"
+  - echo "$LOGIN_KEY_PASSPHRASE"
 
 script: cd "SGA_Build" && mvn -e clean install
 
