formatting placeholders for build replace

--- a/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
+++ b/Science_Gateway_Apex/src/main/resources/bigred2_config.properties
@@ -1,9 +1,9 @@
 # Login Properties
-loginUser=user
-loginKey=/path/id_rsa
+loginUser=$user
+loginKey=$path/id_rsa
 hostName=bigred2.uits.iu.edu
 portName=22
-passPhrase=xxxxx
+passPhrase=$passphrase
 
 # User job Directory
 jobDir=/N/u/%s/BigRed2/%s/%s
