--- a/Science_Gateway_Apex/src/main/resources/config.properties
+++ b/Science_Gateway_Apex/src/main/resources/config.properties
@@ -1,10 +1,10 @@
 # Login Properties
-loginUser=user
-loginKey=/path/id_rsa
-knownHosts=/path/known_hosts
+loginUser=$user
+loginKey=$path/id_rsa
+knownHosts=$path/known_hosts
 hostName=karst.uits.iu.edu
 portName=22
-passPhrase=xxxxx
+passPhrase=$passphrase
 
 # Home Directory
 userHome=/N/u/%s/Karst
