--- a/Science_Gateway_Apex/src/main/resources/karst_config.properties
+++ b/Science_Gateway_Apex/src/main/resources/karst_config.properties
@@ -1,9 +1,9 @@
 # Login Properties
-loginUser=user
-loginKey=/path/id_rsa
+loginUser=$user
+loginKey=$path/id_rsa
 hostName=karst.uits.iu.edu
 portName=22
-passPhrase=xxxxx
+passPhrase=$passphrase
 
 # Home Directory
 jobDir=/N/u/%s/Karst/%s/%s
