--- a/SGA_Apex_REST_API_WAR/jetty-jdbcConfig.properties
+++ b/SGA_Apex_REST_API_WAR/jetty-jdbcConfig.properties
@@ -1,7 +1,15 @@
-jdbcdriver = org.sqlite.JDBC
-url = jdbc:sqlite:../DB/sga_apex.db
-username = jetty
-password = jetty
+# Uncomment the following SQLITE properties for unit tests
+#url = jdbc:sqlite:../DB/sga_apex.db
+#username = jetty
+#password = jetty
+
+# Following block is for the Amazon RDS MySQL properties.
+# Please comment it in case you are using the SQLITE.
+jdbcdriver = com.mysql.jdbc.Driver
+url = jdbc:mysql://teamapexdb.cfofssvi9hbo.us-west-2.rds.amazonaws.com:3306/teamapexdb
+username = admin
+password = $awsdbpass
+
 usertable = User
 usertablekey = Id
 usertableuserfield = username
