--- a/SGA_Apex_REST_API_WAR/pom.xml
+++ b/SGA_Apex_REST_API_WAR/pom.xml
@@ -30,6 +30,10 @@
 
 		<!-- SGA middleware version -->
 		<sgaJarVersion>0.1.0</sgaJarVersion>
+
+		<!-- MySQL Version -->
+		<mysql_version>5.1.6</mysql_version>
+
 	</properties>
 
 	<dependencies>
@@ -160,6 +164,11 @@
 						<groupId>org.xerial</groupId>
 						<artifactId>sqlite-jdbc</artifactId>
 						<version>${sqlite.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>${mysql_version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
