--- a/Science_Gateway_Apex/pom.xml
+++ b/Science_Gateway_Apex/pom.xml
@@ -25,6 +25,9 @@
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
 
+		<!-- MySQL Version -->
+		<mysql_version>5.1.6</mysql_version>
+
 	</properties>
 
 	<dependencies>
@@ -69,6 +72,13 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>${sqlite.version}</version>
+		</dependency>
+
+		<!-- MySQL DB -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql_version}</version>
 		</dependency>
 
 		<!-- JPA -->
