--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,15 @@ before_script:
   - cd SGA_Apex_REST_API_WAR/src/main/resources/scripts
   - source replace_props.sh
   - cd -
+  - cd SGA_Apex_UI_WEB/src/resources/scripts
+  - source replace_props.sh
+  - cd -
 
 script: cd "SGA_Build" && mvn -e clean install
 
 before_deploy:
   - cd ..
-  - zip -r SGA_Apex_Application.zip Science_Gateway_Apex SGA_Apex_REST_API_WAR appspec.yml || true
+  - zip -r SGA_Apex_Application.zip Science_Gateway_Apex SGA_Apex_REST_API_WAR SGA_Apex_UI_WEB appspec.yml || true
   - mkdir -p "dpl_cd_upload"
   - mv SGA_Apex_Application.zip dpl_cd_upload/SGA_Apex_Application.zip || true
 
